k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-app-service
                port:
                  number: 80
    - host:
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nodejs-app-service
                port:
                  number: 3000
